--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -14,6 +14,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
+        timestamp=$(date -u)
         curl https://covid.cdc.gov/covid-data-tracker/COVIDData/getAjaxData?id=vaccination_data | jq . > vaccinations_${timestamp}.json
     - name: Commit and push if it changed
       run: |-
