--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Fetch latest data
       run: |-
         timestamp=$(date -u)
-        curl https://covid.cdc.gov/covid-data-tracker/COVIDData/getAjaxData?id=vaccination_data | jq . > vaccinations_${timestamp}.json
+        curl https://covid.cdc.gov/covid-data-tracker/COVIDData/getAjaxData?id=vaccination_data | jq . > prefix-$(date)
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
