--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -10,12 +10,15 @@ jobs:
   scheduled:
     runs-on: ubuntu-latest
     steps:
+    -name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
     - name: Check out this repo
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
         timestamp=$(date -u)
-        curl https://covid.cdc.gov/covid-data-tracker/COVIDData/getAjaxData?id=vaccination_data | jq . > prefix-$(date)
+        curl https://covid.cdc.gov/covid-data-tracker/COVIDData/getAjaxData?id=vaccination_data | jq . > ${{steps.date.outputs.date}} + '_vaccinations.json'
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
