--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Fetch latest data
       run: |-
         timestamp=$(date -u)
-        curl https://covid.cdc.gov/covid-data-tracker/COVIDData/getAjaxData?id=vaccination_data | jq . > ${{steps.date.outputs.date}} + '_vaccinations.json'
+        curl https://covid.cdc.gov/covid-data-tracker/COVIDData/getAjaxData?id=vaccination_data | jq . > "vaccinations_${timestamp}.json"
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
