--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
-        timestamp=$(date -u)
+        timestamp=$(date '+%Y-%m-%d')
         curl https://covid.cdc.gov/covid-data-tracker/COVIDData/getAjaxData?id=vaccination_data | jq . > "data/vaccinations_${timestamp}.json"
     - name: Commit and push if it changed
       run: |-
